--- a/style.css
+++ b/style.css
@@ -65,7 +65,6 @@ h1 {
   .text-block,
   .form-block,
   .bottom-block p {
-    width: calc(100% - 20px);
-    margin: 10px;
+    width: 100%;
   }
 }
