--- a/style.css
+++ b/style.css
@@ -4,6 +4,10 @@
 body {
   margin: 20px;
 }
+
+.clear {
+  clear: both;
+}
 .logo {
   display: block;
   width: 200px;
@@ -47,11 +51,13 @@ h1 {
   font-weight: bold;
   font-size: 10px;
 }
-.clear {
-  clear: both;
+
+.bottom-block {
+  width: 100%;
+  float: right;
 }
 
-.bottom-block p {
+.bottom-p {
   border: 1px solid black;
   background-color: #ccc;
   color: #fff;
@@ -60,6 +66,7 @@ h1 {
   width: 25%;
   text-align: center;
 }
+
 @media (max-width: 767px) {
   .list-block,
   .text-block,
